--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,13 @@
+upload.path =/D:/docs/pics/blog
+
+
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/spring.web.blog
+#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/spring.web.blog
+spring.datasource.url=jdbc:mysql://localhost:3306/spring.web.blog?&serverTimezone=Europe/Moscow
+
 spring.datasource.username=root
 spring.datasource.password=12345
-server.port=9090
+server.port=9091
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
