--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,19 @@
-upload.path =/D:/docs/pics/blog
+upload.path                                                 =/D:/docs/pics/blog
+upload.path2                                                 =/D:/docs/pics/blog/bukhlo
 
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto                               =update
 #spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/spring.web.blog
-spring.datasource.url=jdbc:mysql://localhost:3306/spring.web.blog?&serverTimezone=Europe/Moscow
+spring.datasource.url                                       =jdbc:mysql://localhost:3306/spring.web.blog?&serverTimezone=Europe/Moscow
 
-spring.datasource.username=root
-spring.datasource.password=12345
-server.port=9091
+spring.datasource.username                                  =root
+spring.datasource.password                                  =12345
+server.port                                                 =9091
 
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql                                         =true
+spring.jpa.properties.hibernate.format_sql                  =true
 
 #logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder =TRACE
+spring.mvc.log-request-details                              =true
 
